# AniDaily

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-14-sqlite-conversation-history.md
projects/jojo test/: style.md
projects/test/: style.md
projects/test en/: style.md
projects/test en/input/: assets.json
projects/test2/input/: assets.json
projects/test233/: style.md
src/: mcp_server.py
src/anidaily.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_tools/: analyze_scene.py  detect_stylize.py  edit_asset.py  generate_panel.py  script_editor.py
src/tools/: face_matcher.py  face_stylizer.py  gemini_image.py  gemini_text.py  person_detector.py  scene_analyzer.py  video_generator.py
src/tools/models/: registry.py
src/web/: agent.py  api.py  db.py  serializer.py
tests/: test_comic_split.py  test_comic_strip.py  test_db.py  test_face_from_image.py  test_face_stylizer.py  test_gemini_image.py  test_grok_video.py  test_person_detector.py  test_scene_angle.py  test_serializer.py  test_storyboard_strip.py
web/frontend/: package-lock.json  package.json
web/frontend/src/: App.tsx  LanguageContext.tsx  api.ts  i18n.ts  index.css
web/frontend/src/components/: AssetSidebar.tsx  CharacterSelectCard.tsx  ChatPanel.tsx  ConfirmDialog.tsx  ConversationHistory.tsx  FaceSelectCard.tsx  InteractionModeSelector.tsx  MessageActions.tsx  ModeSelector.tsx  PreviewPanel.tsx  ProjectSelector.tsx  TaskPlanCard.tsx  ToolCallCard.tsx
